syntax = "proto3";

package e2e_message;

message RuleCheckRequest {
    bytes taskhash = 1;
    string rule_file = 2;
    string input_data = 3;
}

message RuleCheckResponse {
    bytes taskhash = 1;  
    bool status =2;  
    string error_info = 3;
    string output_data = 4;
    string cproof = 5;
}